# stacrs

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml  stacrs.pyi
.github/workflows/: ci.yaml
docs/api/: migrate.md
docs/examples/: README.md  example_read.py  example_search.py
src/: duckdb.rs
