[package]
name = "stacrs"
version = "0.6.0-beta.0"
edition = "2021"
publish = false

[lib]
name = "stacrs"
crate-type = ["cdylib"]

[features]
duckdb-bundled = ["stac-duckdb/bundled"]

[dependencies]
clap = "4.5.31"
geojson = "0.24.1"
geoarrow = "0.4.0-beta.3"
pyo3 = { version = "0.23.5", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23.0", features = [
    "tokio",
    "tokio-runtime",
] }
pyo3-arrow = "0.7.2"
pythonize = "0.23.0"
serde = "1.0.217"
serde_json = "1.0.138"
stac = { features = [
    "geoparquet-compression",
    "object-store-all",
], git = "https://github.com/stac-utils/stac-rs", branch = "main" }
stac-api = { features = [
    "client",
], git = "https://github.com/stac-utils/stac-rs", branch = "main" }
stac-cli = { git = "https://github.com/stac-utils/stac-rs", features = [
    "pgstac",
    "duckdb",
], branch = "main" }
stac-duckdb = { git = "https://github.com/stac-utils/stac-rs", branch = "main" }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
pyo3-log = "0.12.1"
tracing = "0.1.41"
