[project]
name = "stacrs"
description = "A no-dependency Python package for STAC, using Rust under the hood."
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
keywords = ["stac", "geospatial"]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
arrow = ["arro3-core>=0.4.5"]

[project.scripts]
stacrs = "stacrs:main"

[project.urls]
Repository = "https://github.com/stac-utils/stacrs"
Documentation = "https://stac-utils.github.io/stacrs"
Issues = "https://github.com/stac-utils/stacrs/issues"

[tool.mypy]
files = "**/*.py"

[[tool.mypy.overrides]]
module = ["pyarrow.*", "geopandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = ["docs/examples/example_*.py"]

[dependency-groups]
dev = [
    "geopandas>=1.0.1",
    "maturin>=1.7.4",
    "mypy>=1.11.2",
    "pyarrow>=19.0.1",
    "pystac[validation]>=1.11.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.1",
    "ruff>=0.6.9",
    "stac-geoparquet>=0.6.0",
]
docs = [
    "contextily>=1.6.2",
    "humanize>=4.12.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.4",
    "markdown-exec>=1.10.1",
    "mike>=2.1.3",
    "mkdocs-gallery>=0.10.4",
    "mkdocs-material[imaging]>=9.5.45",
    "mkdocstrings[python]>=0.27.0",
    "pystac-client>=0.8.5",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
strip = true
opt-level = "z"   # TODO compare with "s"
lto = true
codegen-units = 1
